fix(css): spacing

--- a/main.css
+++ b/main.css
@@ -200,5 +200,6 @@ ul li::before {
   .guide-mobile {
     display: flex;
     justify-content: center;
+    margin-bottom: 6rem;
   }
 }
